# aifn

./: .gitignore  README.md  pyproject.toml
aifn/: cli.py  paths.py  provider.py  registry.py  runner.py  scaffold.py  similarity.py
tests/: test_cli.py  test_provider.py  test_registry.py  test_runner.py  test_similarity.py
